sandbox/output
TicketDispenserTest.java:24: error: ';' expected
        assertEquals(1,newTicketFromAnotherDispenser-previousTicketFromDispenser)       
                                                                                 ^
1 error
